<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    android:paddingHorizontal="30dp"
    android:paddingVertical="50dp"
    tools:context=".presentation.fragment.WarnFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/warn_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:cardElevation="-5dp"
        app:contentPadding="15dp"
        app:contentPaddingBottom="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quantity_layout"
                style="@style/TextInputAppearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:hint="@string/quantity"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/base_currency_layout"
                style="@style/TextInputAppearance"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="@id/minimum_layout"
                app:layout_constraintEnd_toStartOf="@id/minimum_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quantity_layout">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/base_currency"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:hint="@string/hint_select_currency"
                    android:inputType="textCapCharacters"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secondary_currency_layout"
                style="@style/TextInputAppearance"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/minimum_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/maximum_layout">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/secondary_currency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:hint="@string/hint_select_currency"
                    android:inputType="textCapCharacters"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/minimum_layout"
                style="@style/TextInputAppearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@id/maximum_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/base_currency_layout"
                app:layout_constraintTop_toBottomOf="@id/quantity_layout">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/minimum"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maximum_layout"
                style="@style/TextInputAppearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/minimum_layout"
                app:layout_constraintTop_toBottomOf="@id/minimum_layout">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/maximum"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_warn"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/warn"
        app:layout_constraintBottom_toBottomOf="@id/warn_card"
        app:layout_constraintEnd_toEndOf="@id/warn_card"
        app:layout_constraintStart_toStartOf="@id/warn_card"
        app:layout_constraintTop_toBottomOf="@id/warn_card" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_converting"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/converting"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>