<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logo_violet"
    android:paddingHorizontal="30dp"
    android:paddingVertical="50dp"
    tools:context=".presentation.fragment.ExchangeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/convert_card"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:contentPaddingBottom="80dp"
        app:cardElevation="-5dp"
        app:contentPadding="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/base_currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toBottomOf="@id/input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/secondary_currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/output_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/TextInputAppearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toTopOf="@id/output_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/base_currency_spinner"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditTextAppearance"
                    android:hint="@string/input"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:text="1.00" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/output_layout"
                style="@style/TextInputAppearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/secondary_currency_spinner"
                app:layout_constraintTop_toBottomOf="@id/input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/output"
                    android:enabled="false"
                    style="@style/TextInputEditTextAppearance"
                    android:inputType="none"
                    android:text="0.00"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/convert_card"
        app:layout_constraintEnd_toEndOf="@id/convert_card"
        app:layout_constraintTop_toBottomOf="@id/convert_card"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="@id/convert_card"
        style="@style/MainButtonStyle"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom"
        style="@style/MainButtonStyle"
        android:text="@string/warning" />
</androidx.constraintlayout.widget.ConstraintLayout>